--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,7 +27,7 @@
     "no-underscore-dangle": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
-    "@typescript-eslint/camelcase": "on",
+    "camelcase": "off",
     "no-useless-constructor": "off",
     "import/no-duplicates": "off",
     "@typescript-eslint/no-unused-vars": ["error", {
