--- a/tsconfig.json
+++ b/tsconfig.json
@@ -68,6 +68,10 @@
 
     /* Advanced Options */
     // "skipLibCheck": true,                     /* Skip type checking of declaration files. */
-    "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
-  }
+    "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+  },
+
+  "exclude": [
+    "prettier.config.js"
+  ]
 }
